--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+build_runner: ^2.4.6
+  connectivity: ^3.0.6
+  connectivity_plus: ^5.0.1
   flutter:
     sdk: flutter
+     get: ^4.6.6
+  get_it: ^7.6.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  provider: ^6.1.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
