--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^1.0.7  
+  image_picker: ^1.0.7
+  path: ^1.8.3
+  share_plus: ^6.0.7
+  sqflite: ^2.3.2
+
 
 dev_dependencies:
   flutter_test:
