--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   path: ^1.8.3
   share_plus: ^6.0.7
   sqflite: ^2.3.2
+  firebase_storage: ^11.6.5
+  file_picker: ^5.2.10
 
 
 dev_dependencies:
