--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   sqflite: ^2.3.2
   firebase_storage: ^11.6.5
   file_picker: ^5.2.10
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
