--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   firebase_storage: ^11.6.5
   file_picker: ^5.2.10
   shared_preferences: ^2.2.2
+  google_maps_flutter: ^2.5.3
+  location: ^5.0.3
+  geocoding: ^2.2.0
 
 
 dev_dependencies:
