--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   google_maps_flutter: ^2.5.3
   location: ^5.0.3
   geocoding: ^2.2.0
+  intl: ^0.19.0
+  url_launcher: ^6.2.5
 
 
 dev_dependencies:
